--- a/pryRodriguezIE/pryRodriguezIE.csproj
+++ b/pryRodriguezIE/pryRodriguezIE.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsAccesoBD.cs" />
+    <Compile Include="clsProveedor.cs" />
     <Compile Include="clsUsuario.cs" />
     <Compile Include="frmCargaProveedores.cs">
       <SubType>Form</SubType>
