--- a/pryRodriguezIE/pryRodriguezIE.csproj
+++ b/pryRodriguezIE/pryRodriguezIE.csproj
@@ -46,14 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="clsAccesoBD.cs" />
     <Compile Include="clsProveedor.cs" />
-    <Compile Include="clsUsuario.cs" />
-    <Compile Include="frmCargaProveedores.cs">
+    <Compile Include="frmProveedoresActivos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmCargaProveedores.Designer.cs">
-      <DependentUpon>frmCargaProveedores.cs</DependentUpon>
+    <Compile Include="frmProveedoresActivos.Designer.cs">
+      <DependentUpon>frmProveedoresActivos.cs</DependentUpon>
     </Compile>
     <Compile Include="frmInicioSesion.cs">
       <SubType>Form</SubType>
@@ -81,8 +79,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frmCargaProveedores.resx">
-      <DependentUpon>frmCargaProveedores.cs</DependentUpon>
+    <EmbeddedResource Include="frmProveedoresActivos.resx">
+      <DependentUpon>frmProveedoresActivos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmInicioSesion.resx">
       <DependentUpon>frmInicioSesion.cs</DependentUpon>
